fixed gulpfile. switched from absolute splash positioning. added subtitles to title sections and fixed scrollspy placement. added resume pdf link and edited letter spacing. fixed nav tabs in projects div.

--- a/scss/_nav_and_splash.scss
+++ b/scss/_nav_and_splash.scss
@@ -17,13 +17,18 @@
     color: $standard-font-color;
   }
 }
-.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
-  border: 2px solid $standard-font-color;
-  border-bottom-color: transparent;
-  border-radius: 0;
+
+.navbar-right {
+  .active {
+    background-color: #EEE;
+  }
+
+  li {
+    text-align: right;
+  }
 }
+
 .secondary-nav {
-  z-index: 4;
   margin-bottom: 85px;
   margin-top: -65px;
 
@@ -58,9 +63,7 @@
 .splash-content {
   background: rgba(51, 51, 51, .42);
   height: 100%;
-  position: relative;
   text-align: center;
-  z-index: 2;
 
   // "Megan ford"
   h1 {
@@ -68,24 +71,20 @@
     color: white;
     display: inline-block;
     left: 0;
-    letter-spacing: .2em;
-    margin: 0 18%;
-    padding-bottom: 12px;
-    position: absolute;
-    right: 0;
+    letter-spacing: .4em;
+    margin: 25% auto 0;
+    padding: 0 25px 12px;
+    text-align: center;
     text-transform: uppercase;
-    top: 37%;
   }
 
   // "software developer"
   h4 {
     color: white;
-    left: 0;
     letter-spacing: .2em;
     margin: 0 auto;
-    position: absolute;
-    right: 0;
-    top: 47%;
+    padding: 8px 0 8px;
+    text-align: center;
   }
 
   // "Code is magic"
@@ -93,11 +92,8 @@
     color: white;
     font-family: $serif-font-family;
     font-size: .7em;
-    left: 0;
     margin: 0 auto;
-    position: absolute;
-    right: 0;
+    text-align: center;
     text-transform: italic;
-    top: 52%;
   }
 }
