--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,13 +8,8 @@ $standard-font-color: #333;
 body {
   font-family: $sans-font-family;
   line-height: 1.8;
+  letter-spacing: 1px;
   position: relative;
-  // in case I want to add a background covering image:
-  // background-attachment: fixed;
-  // background-color: #fff;
-  // background-position: center center;
-  // background-repeat: no-repeat;
-  // background-size: cover;
 }
 
 .hideme {
@@ -29,26 +24,49 @@ body {
 //all content from 'about' to 'contact' is in this div.
 .wrapper {
   margin: 0 auto;
-  width: 92%;
   padding-top: 40px;
+  width: 92%;
 
 }
 
 // the titles for the page are all h2s. 
 h2 {
-  text-transform: uppercase;
   border-bottom: 2px solid $standard-font-color;
-  padding: 8px;
+  letter-spacing: .2em;
+  margin: 0 auto;
+  padding: 73px 8px 8px;
   text-align: center;
-  margin: 65px;
+  text-transform: uppercase;
 }
+
+.tiny-italic {
+  color: $standard-font-color;
+  font-family: $serif-font-family;
+  font-size: .8em;
+  margin-top: 8px;
+  text-align: center;
+
+  p {
+    margin: 8px auto 45px;
+  }
+
+  a {
+    color: $standard-font-color;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
+
 
 //text in the 'about me' section.
 .about-text {
   line-height: 2.2em;
   margin: 0 auto;
   max-width: 50em;
-  text-align: center;
+  text-align: justify;
 }
 
 //styling for the grid of 'technologies'. Mess with the tooltips here.
@@ -69,57 +87,70 @@ h2 {
 //project tab styling.
 .project-title {
   border-bottom: 0;
-  margin-bottom: 17px;
+  margin-bottom: 8px;
 }
 
 .proj-tabs {
   margin: 0 auto;
-  max-width: 80%;
   text-align: center;
+
   li {
-    float: none;
     display: inline-block;
+    float: none;
   }
+
   a {
     color: $standard-font-color;
     text-transform: uppercase;
-    &:active {
-      border-color: $standard-font-color;
-    }
   }
 
 }
 
+.nav-tabs {
+  border-bottom: 2px solid $standard-font-color;
+}
+
+// changes the color of the active page border on the projects tabs.
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
+  border: 2px solid $standard-font-color;
+  border-bottom: 0 transparent;
+  border-radius: 0;
+}
+
 //project div styling.
 .proj-div {
-  min-height: 400px;
-  border-top: 2px solid $standard-font-color;
   margin: 0 auto;
+  min-height: 400px;
+  // border-top: 2px solid $standard-font-color;
   padding-top: 25px;
   text-align: center;
+
   h4 {
     min-height: 20px;
-    text-transform: uppercase;
     text-align: center;
+    text-transform: uppercase;
   }
-  p{
+
+  p {
     line-height: 2.2em;
     text-align: justify;
   }
+
   a {
-    padding-top: 5px;
-    display: block;
-    text-align: right;
-    font-family: $serif-font-family;
     color: $standard-font-color;
+    display: block;
+    font-family: $serif-font-family;
     font-size: .8em;
+    padding-top: 5px;
+    text-align: right;
   }
+
   img {
+    border: 2px solid $standard-font-color;
+    margin: 10px auto;
     max-width: 100%;
     min-height: 300px;
     padding: 8px;
-    border: 2px solid $standard-font-color;
-    margin: 10px auto;
   }
 
 }
@@ -128,9 +159,12 @@ h2 {
 .contact-title {
   margin-top: 50px;
 }
+
 .contact-buttons {
   margin-bottom: 25px;
+
   .col {
     text-align: center;
   }
 }
+
